# tradebot

./: .gitignore  README.md  app.py  cli.py  pyproject.toml  requirements.txt
bot/: client.py  logging_config.py  mock_client.py  orders.py  validators.py
templates/: index.html
