[project]
name = "trading-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "binance-futures-connector>=4.1.0",
    "dotenv>=0.9.9",
    "flask>=3.1.3",
    "pylance>=4.0.0",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
]
